[package]
name = "mengine"
version = "0.6.0"
authors = ["planet0104 <planet0104@gmail.com>"]
edition = "2018"

[dependencies]

[dependencies.image]
version = "0.21.1"
default-features = false

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(not(any(target_arch = "asmjs", target_arch = "wasm32")))'.dependencies]
piston_window = "0.89.0"
piston-gfx_texture = "0.35.0"
gfx_device_gl = "0.15.5"
winit = { version = "0.18.1", features = [ "icon_loading"] }
rodio = "0.8.1"
rand = "0.6.5"

[target.'cfg(any(target_arch = "asmjs", target_arch = "wasm32"))'.dependencies]
wasm-bindgen = "*"
stdweb = "0.4.17"
askama = "0.8.0"